--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,13 @@
   </head>
 
   <body>
+  <% flash.each do |name,msg| %>
+  	<ul>
+  		<li><%= msg %></li>
+  	</ul>
+  	<% end %>
+  	</body>
+
     <%= yield %>
   </body>
 </html>
