--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,7 @@
-<h1> shwing the selected article</h1><br>
+<h1> showing the selected article</h1><br>
 <p>Title:<%= @article.title %></p>
 <p>Description:<%= @article.description %></p>
+	<%= link_to "go back to articles page" , articles_path %><br>
+	<%= link_to "edit this article", edit_article_path(@article)%>
+
+
