--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,7 +5,7 @@
 	<p>DESCRIPTION:<%= article.description %></p>
 	<p>ARTICLE NO.:<%= article.id %></p>
 	<%= link_to "edit this article", edit_article_path(article) %><br>
-	<%= link_to "destroy this article", article_path(article.id) %><br>
+	<%= link_to "destroy this article",article_path(article),method: :delete , data: {confirm: "ARE YOU SURE dear USER"} %><br>
 	<%= link_to "show this article", article_path(article) %>
 	<br>
 	<br>
