--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,12 +9,8 @@
   </head>
 
   <body>
-  <% flash.each do |name,msg| %>
-  	<ul>
-  		<li><%= msg %></li>
-  	</ul>
-  	<% end %>
-  	</body>
+  <%= render 'layouts/messages' %>
+  </body>
 
     <%= yield %>
   </body>
