--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,4 +1,4 @@
-<h1>edit the existing article</h1>
+
 
 <% if @article.errors.any? %>
 <h2>the following errors have been addressed</h2>
@@ -8,20 +8,36 @@
 	<% end %>
 	</ul>
 <% end %>
+<div class="row">
+	<div class="col-xs-12">
+		<%= form_for @article do |f| %>
+			<div class="form-group">
+				<div class="control-label col-sm-2">
+					<%= f.label :title %>
+				</div>
+				<div class="col-sm-8">
+					<%= f.text_field :title, class: "form-control", placeholder: "giva a title to your ideas", autofocus: true %>
+				</div>
+			</div>
+			<br><br><br><br>
+			<div class="form-group">
+				<div class="control-label col-sm-2">
+					<%= f.label :description %>
+				</div>
+				<div class="col-sm-8">
+					<%= f.text_area :description,rows: 8, class: "form-control", placeholder: "give body to your article" %>
+				</div>
+			</div>
+			<br><br><br><br><br><br><br><br><br><br>
+			<p style="margin-left:500px">
+				<%= f.submit class: 'btn btn-primary btn-lg'%>
+			</p>
+		<% end %>
+	</div>
+</div>
 
-<%= form_for @article do |f| %>
-	<p>
-		<%= f.label :title %><br>
-		<%= f.text_field :title %>
-		
-	</p>
-	<p>
-		<%= f.label :description %><br>
-		<%= f.text_area :description %>
-	</p>
+	
 
-	<p>
-	<%= f.submit %>
-	</p>
+	
 
-	<% end %>
+	
