--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,6 @@
-<h2>this is home page for my blog</h2>
-<%= link_to "exPresso" , articles_path %>
-<%= link_to "aboutMe" , about_path %> 
+<div class="center jumbotron">
+	<h1>give Your Feelings, a Blow</h1>
+	<%= link_to "sign_up" , "#" , class:"btn btn-primary btn-lg", id:"button" %>
+</div>
+
+
