--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,6 +1,6 @@
-
+<h1>edit the article</h1>
 	<%= render 'form' %>
-	<%= link_to "go back to articles page" , articles_path %>
+	<%= link_to "{go back to articles page}" , articles_path %>
 
 
 
