--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,6 @@
 	<h1>create a new ARTICLE</h1>
 	<%= render 'form' %>
-	<%= link_to "go back to articles page" , articles_path %>
+	
+	<%= link_to "{go back to articles page}" , articles_path %>
 
 
