--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,4 @@
-<h1>listing all the articles</h1>
-<%= link_to "create new article", new_article_path %>
+<!-- <h1>listing all the articles</h1>
 <% @articles.each do |article| %>
 	<p>TITLE:<%= article.title %></p>
 	<p>DESCRIPTION:<%= article.description %></p>
@@ -9,4 +8,41 @@
 	<%= link_to "show this article", article_path(article) %>
 	<br>
 	<br>
-<% end %>
+<% end %> --> 
+<h1 class="center">listing all the articles</h1>
+<br><br>
+
+<div class=" out container">
+
+  <% @articles.each do |article| %>
+  <div class="center well">
+    <h4 id="title">TITLE:<%= article.title %></h4>
+    <h4 id="description">DESCRIPTION:<%= truncate(article.description , length:50) %></h4>
+    <!-- Trigger the modal with a button -->
+    <button type="button" class="btn btn-warning btn-md" data-toggle="modal" data-target="#myModal">readFullArticle</button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" role="dialog">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-body">
+            <p><%= article.description %></p>
+          </div>
+          <div class="modal-footer"> 	
+            <div class="article_actions-1">
+  			
+  				<%= link_to "go back to articles page" , articles_path, class:"btn btn-xs btn-success" %>
+  				<%= link_to "edit this article", edit_article_path(article),class:"btn btn-xs btn-primary"%>
+  				<%= link_to "delete this article", article_path(article),method: :delete,data:{confirm:"are you sure?"},class:"btn btn-xs btn-danger"%>
+  			</div>
+          </div>
+        </div>
+      </div>
+    </div>
+   </div>
+  <% end %>
+
+</div>
+
+
+ 
