--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,7 +1,17 @@
-<h1> showing the selected article</h1><br>
-<p>Title:<%= @article.title %></p>
-<p>Description:<%= @article.description %></p>
-	<%= link_to "go back to articles page" , articles_path %><br>
-	<%= link_to "edit this article", edit_article_path(@article)%>
+
+<h2 align="center">Title:<%= @article.title %></h2>
+<div class="well col-xs-8 col-xs-offset-2">
+	<h4 class="center description"><strong>Description:</strong></h4>
+	<hr>
+		<%= simple_format(@article.description) %>
+			<div class="article_actions">
+			
+				<%= link_to "go back to articles page" , articles_path, class:"btn btn-xs btn-success" %>
+				<%= link_to "edit this article", edit_article_path(@article),class:"btn btn-xs btn-primary"%>
+				<%= link_to "delete this article", article_path(@article),method: :delete,data:{confirm:"are you sure?"},class:"btn btn-xs btn-danger"%>
+			
+			</div>
+</div>
+
 
 
