--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,4 @@
-<div class=" container">
-  <div class=" center well well-lg">
-   <p> <h3>Contact Me: &nbsp;<%= link_to 'Rohan Arora' , about_path %></h3></p>
-    
-  </div>
-  </div>
+<div class="center footer">
+	<h3>Contact Me: &nbsp;<%= link_to 'Rohan Arora' , about_path %></h3></p>
+ </div>
+  
