--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,5 +1,7 @@
-<% flash.each do |name,msg| %>
-  	<ul>
-  		<li><%= msg %></li>
-  	</ul>
+<div class="errors1">
+	<% flash.each do |name,msg| %>
+  		<ul>
+  			<li><%= msg %></li>
+  		</ul>
   	<% end %>
+</div>
