added bcrypt gem

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -96,4 +96,11 @@ body{
 	padding-bottom:15px;
 
 }
+.article_details{
+	border: 1px solid #eaeaea;
+	box-sizing: border-box;
+	width:180px;
+	margin-left:42%
+
+}
 
