--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -18,6 +18,10 @@
   <div class="center well">
     <h4 id="title">TITLE:<%= article.title %></h4>
     <h4 id="description">DESCRIPTION:<%= truncate(article.description , length:50) %></h4>
+    <div class="center article_details">
+        <small>createdBy: <%= article.user.username if article.user%><br>time:<%= time_ago_in_words(article.created_at) %> ago<br>lastUpdated:<%= time_ago_in_words(article.updated_at) %></small>
+    </div>
+    <br><br>
     <!-- Trigger the modal with a button -->
     <button type="button" class="btn btn-warning btn-md" data-toggle="modal" data-target="#myModal">readFullArticle</button>
 
