--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,4 +19,6 @@
   <%= render 'layouts/footer' %>
   <%= debug(params) if Rails.env.development? %>
   </body>
+  <footer></footer>
+  <div class="floatingTop"><a href="#top" id="toTop">^ </a></div>
 </html>
