--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -18,14 +18,17 @@
           <div class="modal-body">
             <p><%= article.description %></p>
           </div>
-          <div class="modal-footer"> 	
+          <% if logged_in && current_user == article.user %>
+          <div class="modal-footer"> 
+          	
             <div class="article_actions-1">
-  			
-  				<%= link_to "go back to articles page" , articles_path, class:"btn btn-xs btn-success" %>
-  				<%= link_to "edit this article", edit_article_path(article),class:"btn btn-xs btn-primary"%>
-  				<%= link_to "delete this article", article_path(article),method: :delete,data:{confirm:"are you sure?"},class:"btn btn-xs btn-danger"%>
+  			         <%= link_to "go back to articles page" , articles_path, class:"btn btn-xs btn-success" %>
+        				<%= link_to "edit this article", edit_article_path(article),class:"btn btn-xs btn-primary"%>
+        				<%= link_to "delete this article", article_path(article),method: :delete,data:{confirm:"are you sure?"},class:"btn btn-xs btn-danger"%>
   			</div>
+       
           </div>
+           <% end %>
         </div>
       </div>
     </div>
