--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,13 +4,15 @@
 	<h4 class="center description"><strong>Description:</strong></h4>
 	<hr>
 		<%= simple_format(@article.description) %>
-			<div class="article_actions">
-			
-				<%= link_to "go back to articles page" , articles_path, class:"btn btn-xs btn-success" %>
+		<div class="article_actions">
+			<% if logged_in && current_user == @article.user %>
 				<%= link_to "edit this article", edit_article_path(@article),class:"btn btn-xs btn-primary"%>
 				<%= link_to "delete this article", article_path(@article),method: :delete,data:{confirm:"are you sure?"},class:"btn btn-xs btn-danger"%>
+			<% end %>
+
+				<%= link_to "go back to articles page" , articles_path, class:"btn btn-xs btn-success" %>
 			
-			</div>
+		</div>
 </div>
 
 
