--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,4 @@
 <div class="center jumbotron">
 	<h1>give Your Feelings, a Blow</h1>
-	<%= link_to "sign_up" , signup_path() , class:"btn btn-primary btn-lg", id:"button"  %>
+	<%= link_to "sign_up" , signup_path() , class:"btn btn-primary btn-lg", id:"button" if !logged_in %>
 </div>
-
-
