--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -34,7 +34,7 @@ width:100%;
 }
 
 .jumbotron{
-	background-image: asset-url('expresso.jpg');
+	background-image: asset-url('coffee.jpg');
 	background-size:cover;
 	height:550px;
 	margin-top: 30px;
