added ui gor categories

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -178,4 +178,21 @@ border-radius:50%;
 	color:#254117;
 }
 
+.category{
+	background-color: #CEF6F5;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	border:1px solid black;
+}
+.style{
+	border-bottom: 1px solid #eaeaea;
+}
+
+#style{
+	background-color:#1F0000;
+	border: 1px solid #1F0000;
+	color:grey;
+	padding-top:5px;
+}
+
 
