--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -29,7 +29,18 @@
 					<%= f.text_area :description,rows: 8, class: "form-control", placeholder: "give body to your ideas" %>
 				</div>
 			</div>
-			<br><br><br><br><br><br><br><br><br><br>
+
+			 <div class="form-group">
+				<div class="row">
+					<div class="col-sm-offset-2 col-sm-8">
+						<%= f.collection_check_boxes :category_ids, Category.all, :id, :name do |cb| %>
+								<%= cb.label(class: "checkbox-inline input_checkbox") {cb.check_box(class: "checkbox") + cb.text} %>
+						<% end %>
+						
+					</div>
+				</div>
+			</div>
+			<br><br><br><br>
 			<p style="margin-left:500px">
 				<%= f.submit class: 'btn btn-primary btn-lg'%>
 			</p>
