--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,6 +4,9 @@
 	<h4 class="center description"><strong>Description:</strong></h4>
 	<hr>
 		<%= simple_format(@article.description) %>
+		<% if @article.categories.any? %>
+		<p>Categories: <%= render '/categories/category' %></p>
+		<% end %>
 		<div class="article_actions">
 			<% if logged_in && current_user == @article.user %>
 				<%= link_to "edit this article", edit_article_path(@article),class:"btn btn-xs btn-primary"%>
