--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -32,28 +32,21 @@
           </div></li>
         <% if logged_in %>
         <li><%= link_to "newArticle" , new_article_path %></li>
-        <% end %>
-        <li></li>
-      </ul>
-      <form class="navbar-form navbar-left">
-      </form>
-      <ul class="nav navbar-nav navbar-right">
-        
-        <% if logged_in %>
-        
-        <li><div class="dropdown">
-            <button class="btn btn-warning dropdown-toggle" type="button" data-toggle="dropdown">Your Profile
-            <span class="caret"></span></button>
-            <ul class="dropdown-menu">
-              <li><%= link_to "edit your profile" , edit_user_path(current_user) %></li>
-              <li><%= link_to "view your profile" , user_path(current_user) %></li>
-              <li><%= link_to "view all users" , users_path %></li>
-            </ul>
-          </div></li>
-          <li><%= link_to "log out" ,   logout_path %></li> 
-        <% end %>
+        <li><%= link_to "log out" ,   logout_path %></li> 
+          <li>  <div class="dropdown">
+                    <button class="btn btn-warning dropdown-toggle" type="button" data-toggle="dropdown">Your Profile
+                        <span class="caret"></span></button>
+                     <ul class="dropdown-menu">
+                        <li><%= link_to "edit your profile" , edit_user_path(current_user) %></li>
+                        <li><%= link_to "view your profile" , user_path(current_user) %></li>
+                        <li><%= link_to "view yourFriends" , add_friends_path %></li>
+                        <li><%= link_to "checkFriendRequests" , friends_path %></li>
+                      </ul>
+               </div>
+          </li>
+        <% else %>
         <li><%= link_to "log in" ,   login_path %></li>
-         
+         <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
