--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,16 @@
 <h1 class="center">welcome to <%= @user.username %>'s  page </h1>
+			
 <div class="row">
 <div class="col-md-4 col-md-offset-4 center">
-<%= gravatar_for @user , size:150 %>
+		<% unless @user == current_user %>
+			<% unless @user.friends.pluck(:id).include?(current_user.id) %>
+		    	<%= link_to 'addFriend', url_for(controller: :users , action: :friend , add_friend_id: @user.id), method: :post  , class: 'btn btn-success btn-xs' %>
+		    <% else %>
+		    	<%= link_to 'removeFriend' ,url_for(controller: :users , action: :friend , add_friend_id: @user.id), method: :post , class: 'btn btn-danger btn-xs' %>
+		    <% end %>
+		    <% end %>
 </div>
 </div>
-<h4 align="center"><%= @user.username %> 's articles'</h4>
+			
+<h4 align="center"><%= @user.username %> 's articles</h4>
 <%= render 'articles/article' , obj: @user.articles %>
